--- a/website/index.html
+++ b/website/index.html
@@ -88,7 +88,7 @@ String run(String url) throws IOException {
 
 <pre class="prettyprint">
 public static final MediaType JSON
-    = MediaType.parse("application/json; charset=utf-8");
+    = MediaType.get("application/json; charset=utf-8");
 
 OkHttpClient client = new OkHttpClient();
 
