--- a/4.x/mockwebserver/mockwebserver/okhttp3.mockwebserver/-mock-response/with-push.html
+++ b/4.x/mockwebserver/mockwebserver/okhttp3.mockwebserver/-mock-response/with-push.html
@@ -10,7 +10,7 @@
 <h1>withPush</h1>
 <a name="okhttp3.mockwebserver.MockResponse$withPush(okhttp3.mockwebserver.PushPromise)"></a>
 <code><span class="keyword">fun </span><span class="identifier">withPush</span><span class="symbol">(</span><span class="identifier" id="okhttp3.mockwebserver.MockResponse$withPush(okhttp3.mockwebserver.PushPromise)/promise">promise</span><span class="symbol">:</span>&nbsp;<a href="../-push-promise/index.html"><span class="identifier">PushPromise</span></a><span class="symbol">)</span><span class="symbol">: </span><a href="index.html"><span class="identifier">MockResponse</span></a></code>
-<p>When <a href="../-mock-web-server/set-protocols.html">protocols</a> include <a href="#">HTTP_2</a>,
-this attaches a pushed stream to this response.</p>
+<p>When <a href="#">protocols</a> include <a href="#">HTTP_2</a>, this attaches a
+pushed stream to this response.</p>
 </BODY>
 </HTML>
