--- a/4.x/mockwebserver/mockwebserver/okhttp3.mockwebserver/-mock-response/with-settings.html
+++ b/4.x/mockwebserver/mockwebserver/okhttp3.mockwebserver/-mock-response/with-settings.html
@@ -10,7 +10,7 @@
 <h1>withSettings</h1>
 <a name="okhttp3.mockwebserver.MockResponse$withSettings(okhttp3.internal.http2.Settings)"></a>
 <code><span class="keyword">fun </span><span class="identifier">withSettings</span><span class="symbol">(</span><span class="identifier" id="okhttp3.mockwebserver.MockResponse$withSettings(okhttp3.internal.http2.Settings)/settings">settings</span><span class="symbol">:</span>&nbsp;<span class="identifier">Settings</span><span class="symbol">)</span><span class="symbol">: </span><a href="index.html"><span class="identifier">MockResponse</span></a></code>
-<p>When <a href="../-mock-web-server/set-protocols.html">protocols</a> include <a href="#">HTTP_2</a>,
-this pushes <a href="with-settings.html#okhttp3.mockwebserver.MockResponse$withSettings(okhttp3.internal.http2.Settings)/settings">settings</a> before writing the response.</p>
+<p>When <a href="#">protocols</a> include <a href="#">HTTP_2</a>, this pushes
+<a href="with-settings.html#okhttp3.mockwebserver.MockResponse$withSettings(okhttp3.internal.http2.Settings)/settings">settings</a> before writing the response.</p>
 </BODY>
 </HTML>
