--- a/4.x/mockwebserver/mockwebserver/okhttp3.mockwebserver/-socket-policy/-r-e-s-e-t_-s-t-r-e-a-m_-a-t_-s-t-a-r-t.html
+++ b/4.x/mockwebserver/mockwebserver/okhttp3.mockwebserver/-socket-policy/-r-e-s-e-t_-s-t-r-e-a-m_-a-t_-s-t-a-r-t.html
@@ -10,6 +10,6 @@
 <h1>RESET_STREAM_AT_START</h1>
 <a name="okhttp3.mockwebserver.SocketPolicy.RESET_STREAM_AT_START"></a>
 <code><span class="identifier">RESET_STREAM_AT_START</span></code>
-<p>Fail HTTP/2 requests without processing them by sending an <a href="../-mock-response/get-http2-error-code.html">MockResponse.getHttp2ErrorCode</a>.</p>
+<p>Fail HTTP/2 requests without processing them by sending an <a href="#">MockResponse.getHttp2ErrorCode</a>.</p>
 </BODY>
 </HTML>
