--- a/4.x/okhttp-dnsoverhttps/okhttp-dnsoverhttps/alltypes/index.html
+++ b/4.x/okhttp-dnsoverhttps/okhttp-dnsoverhttps/alltypes/index.html
@@ -12,7 +12,7 @@
 <td>
 <a href="../okhttp3.dnsoverhttps/-dns-over-https/index.html">okhttp3.dnsoverhttps.DnsOverHttps</a></td>
 <td>
-<p><a href="#">DNS over HTTPS implementation</a>[<a href="https://tools.ietf.org/html/draft-ietf-doh-dns-over-https-13">doh_spec</a>].</p>
+<p><a href="https://tools.ietf.org/html/draft-ietf-doh-dns-over-https-13">DNS over HTTPS implementation</a>.</p>
 </td>
 </tr>
 <tr>
