--- a/4.x/okhttp-dnsoverhttps/okhttp-dnsoverhttps/okhttp3.dnsoverhttps/index.html
+++ b/4.x/okhttp-dnsoverhttps/okhttp-dnsoverhttps/okhttp3.dnsoverhttps/index.html
@@ -17,7 +17,7 @@
 </td>
 <td>
 <code><span class="keyword">class </span><span class="identifier">DnsOverHttps</span>&nbsp;<span class="symbol">:</span>&nbsp;<span class="identifier">Dns</span></code>
-<p><a href="#">DNS over HTTPS implementation</a>[<a href="https://tools.ietf.org/html/draft-ietf-doh-dns-over-https-13">doh_spec</a>].</p>
+<p><a href="https://tools.ietf.org/html/draft-ietf-doh-dns-over-https-13">DNS over HTTPS implementation</a>.</p>
 </td>
 </tr>
 <tr>
