--- a/4.x/okhttp-tls/okhttp-tls/okhttp3.tls/-handshake-certificates/trust-manager.html
+++ b/4.x/okhttp-tls/okhttp-tls/okhttp3.tls/-handshake-certificates/trust-manager.html
@@ -8,7 +8,7 @@
 <a href="../../index.html">okhttp-tls</a>&nbsp;/&nbsp;<a href="../index.html">okhttp3.tls</a>&nbsp;/&nbsp;<a href="index.html">HandshakeCertificates</a>&nbsp;/&nbsp;<a href="./trust-manager.html">trustManager</a><br/>
 <br/>
 <h1>trustManager</h1>
-<a name="okhttp3.tls.HandshakeCertificates$trustManager()"></a>
-<code><span class="keyword">fun </span><span class="identifier">trustManager</span><span class="symbol">(</span><span class="symbol">)</span><span class="symbol">: </span><a href="https://docs.oracle.com/javase/8/docs/api/javax/net/ssl/X509TrustManager.html"><span class="identifier">X509TrustManager</span></a></code>
+<a name="okhttp3.tls.HandshakeCertificates$trustManager"></a>
+<code><span class="keyword">val </span><span class="identifier">trustManager</span><span class="symbol">: </span><a href="https://docs.oracle.com/javase/8/docs/api/javax/net/ssl/X509TrustManager.html"><span class="identifier">X509TrustManager</span></a></code>
 </BODY>
 </HTML>
