--- a/4.x/okhttp/okhttp/okhttp3/-cookie/index.html
+++ b/4.x/okhttp/okhttp/okhttp3/-cookie/index.html
@@ -8,7 +8,7 @@
 <a href="../../index.html">okhttp</a>&nbsp;/&nbsp;<a href="../index.html">okhttp3</a>&nbsp;/&nbsp;<a href="./index.html">Cookie</a><br/>
 <br/>
 <h1>Cookie</h1>
-<code><span class="keyword">data</span> <span class="keyword">class </span><span class="identifier">Cookie</span></code>
+<code><span class="keyword">class </span><span class="identifier">Cookie</span></code>
 <p>An <a href="http://tools.ietf.org/html/rfc6265">RFC 6265</a> Cookie.</p>
 <p>This class doesn't support additional attributes on cookies, like
 <a href="https://code.google.com/p/chromium/issues/detail?id=232693">Chromium's Priority=HIGH extension</a>.</p>
@@ -124,6 +124,20 @@ this path's segments. For example, if this path is <code>/foo</code> this cookie
 <h3>Functions</h3>
 <table>
 <tbody>
+<tr>
+<td>
+<p><a href="equals.html">equals</a></p>
+</td>
+<td>
+<code><span class="keyword">fun </span><span class="identifier">equals</span><span class="symbol">(</span><span class="identifier" id="okhttp3.Cookie$equals(kotlin.Any)/other">other</span><span class="symbol">:</span>&nbsp;<a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-any/index.html"><span class="identifier">Any</span></a><span class="symbol">?</span><span class="symbol">)</span><span class="symbol">: </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html"><span class="identifier">Boolean</span></a></code></td>
+</tr>
+<tr>
+<td>
+<p><a href="hash-code.html">hashCode</a></p>
+</td>
+<td>
+<code><span class="keyword">fun </span><span class="identifier">hashCode</span><span class="symbol">(</span><span class="symbol">)</span><span class="symbol">: </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-int/index.html"><span class="identifier">Int</span></a></code></td>
+</tr>
 <tr>
 <td>
 <p><a href="matches.html">matches</a></p>
