--- a/4.x/okhttp/okhttp/okhttp3/-headers/index.html
+++ b/4.x/okhttp/okhttp/okhttp3/-headers/index.html
@@ -179,13 +179,20 @@ either the field is absent or cannot be parsed as a date.</p>
 <tbody>
 <tr>
 <td>
-<p><a href="of.html">of</a></p>
+<p><a href="headers-of.html">headersOf</a></p>
 </td>
 <td>
-<code><span class="keyword">fun </span><span class="identifier">of</span><span class="symbol">(</span><span class="keyword">vararg</span> <span class="identifier" id="okhttp3.Headers.Companion$of(kotlin.Array((kotlin.String)))/namesAndValues">namesAndValues</span><span class="symbol">:</span>&nbsp;<a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html"><span class="identifier">String</span></a><span class="symbol">)</span><span class="symbol">: </span><a href="./index.html"><span class="identifier">Headers</span></a></code>
+<code><span class="keyword">fun </span><span class="identifier">headersOf</span><span class="symbol">(</span><span class="keyword">vararg</span> <span class="identifier" id="okhttp3.Headers.Companion$headersOf(kotlin.Array((kotlin.String)))/namesAndValues">namesAndValues</span><span class="symbol">:</span>&nbsp;<a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html"><span class="identifier">String</span></a><span class="symbol">)</span><span class="symbol">: </span><a href="./index.html"><span class="identifier">Headers</span></a></code>
 <p>Returns headers for the alternating header names and values. There must be an even number of
 arguments, and they must alternate between header names and values.</p>
-<code><span class="keyword">fun </span><span class="identifier">of</span><span class="symbol">(</span><span class="identifier" id="okhttp3.Headers.Companion$of(kotlin.collections.Map((kotlin.String, )))/headers">headers</span><span class="symbol">:</span>&nbsp;<a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/index.html"><span class="identifier">Map</span></a><span class="symbol">&lt;</span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html"><span class="identifier">String</span></a><span class="symbol">,</span>&nbsp;<a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html"><span class="identifier">String</span></a><span class="symbol">&gt;</span><span class="symbol">)</span><span class="symbol">: </span><a href="./index.html"><span class="identifier">Headers</span></a></code>
+</td>
+</tr>
+<tr>
+<td>
+<p><a href="to-headers.html">toHeaders</a></p>
+</td>
+<td>
+<code><span class="keyword">fun </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/index.html"><span class="identifier">Map</span></a><span class="symbol">&lt;</span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html"><span class="identifier">String</span></a><span class="symbol">,</span>&nbsp;<a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html"><span class="identifier">String</span></a><span class="symbol">&gt;</span><span class="symbol">.</span><span class="identifier">toHeaders</span><span class="symbol">(</span><span class="symbol">)</span><span class="symbol">: </span><a href="./index.html"><span class="identifier">Headers</span></a></code>
 <p>Returns headers for the header names and values in the <a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/index.html">Map</a>.</p>
 </td>
 </tr>
