--- a/4.x/okhttp/okhttp/okhttp3/-interceptor/index.html
+++ b/4.x/okhttp/okhttp/okhttp3/-interceptor/index.html
@@ -44,7 +44,10 @@ or response.</p>
 <p><a href="invoke.html">invoke</a></p>
 </td>
 <td>
-<code><span class="keyword">operator</span> <span class="keyword">fun </span><span class="identifier">invoke</span><span class="symbol">(</span><span class="identifier" id="okhttp3.Interceptor.Companion$invoke(kotlin.Function1((okhttp3.Interceptor.Chain, okhttp3.Response)))/block">block</span><span class="symbol">:</span>&nbsp;<span class="symbol">(</span><span class="identifier">chain</span><span class="symbol">:</span>&nbsp;<a href="-chain/index.html"><span class="identifier">Interceptor.Chain</span></a><span class="symbol">)</span>&nbsp;<span class="symbol">-&gt;</span>&nbsp;<a href="../-response/index.html"><span class="identifier">Response</span></a><span class="symbol">)</span><span class="symbol">: </span><a href="./index.html"><span class="identifier">Interceptor</span></a></code></td>
+<code><span class="keyword">operator</span> <span class="keyword">fun </span><span class="identifier">invoke</span><span class="symbol">(</span><span class="identifier" id="okhttp3.Interceptor.Companion$invoke(kotlin.Function1((okhttp3.Interceptor.Chain, okhttp3.Response)))/block">block</span><span class="symbol">:</span>&nbsp;<span class="symbol">(</span><span class="identifier">chain</span><span class="symbol">:</span>&nbsp;<a href="-chain/index.html"><span class="identifier">Interceptor.Chain</span></a><span class="symbol">)</span>&nbsp;<span class="symbol">-&gt;</span>&nbsp;<a href="../-response/index.html"><span class="identifier">Response</span></a><span class="symbol">)</span><span class="symbol">: </span><a href="./index.html"><span class="identifier">Interceptor</span></a></code>
+<p>Constructs an interceptor for a lambda. This compact syntax is most useful for inline
+interceptors.</p>
+</td>
 </tr>
 </tbody>
 </table>
