--- a/4.x/okhttp/okhttp/okhttp3/-interceptor/invoke.html
+++ b/4.x/okhttp/okhttp/okhttp3/-interceptor/invoke.html
@@ -9,6 +9,12 @@
 <br/>
 <h1>invoke</h1>
 <a name="okhttp3.Interceptor.Companion$invoke(kotlin.Function1((okhttp3.Interceptor.Chain, okhttp3.Response)))"></a>
-<code><span class="identifier">@JvmName</span><span class="symbol">(</span>"-deprecated_Interceptor"<span class="symbol">)</span> <span class="keyword">inline</span> <span class="keyword">operator</span> <span class="keyword">fun </span><span class="identifier">invoke</span><span class="symbol">(</span><span class="keyword">crossinline</span> <span class="identifier" id="okhttp3.Interceptor.Companion$invoke(kotlin.Function1((okhttp3.Interceptor.Chain, okhttp3.Response)))/block">block</span><span class="symbol">:</span>&nbsp;<span class="symbol">(</span><span class="identifier">chain</span><span class="symbol">:</span>&nbsp;<a href="-chain/index.html"><span class="identifier">Interceptor.Chain</span></a><span class="symbol">)</span>&nbsp;<span class="symbol">-&gt;</span>&nbsp;<a href="../-response/index.html"><span class="identifier">Response</span></a><span class="symbol">)</span><span class="symbol">: </span><a href="index.html"><span class="identifier">Interceptor</span></a></code>
+<code><span class="keyword">inline</span> <span class="keyword">operator</span> <span class="keyword">fun </span><span class="identifier">invoke</span><span class="symbol">(</span><span class="keyword">crossinline</span> <span class="identifier" id="okhttp3.Interceptor.Companion$invoke(kotlin.Function1((okhttp3.Interceptor.Chain, okhttp3.Response)))/block">block</span><span class="symbol">:</span>&nbsp;<span class="symbol">(</span><span class="identifier">chain</span><span class="symbol">:</span>&nbsp;<a href="-chain/index.html"><span class="identifier">Interceptor.Chain</span></a><span class="symbol">)</span>&nbsp;<span class="symbol">-&gt;</span>&nbsp;<a href="../-response/index.html"><span class="identifier">Response</span></a><span class="symbol">)</span><span class="symbol">: </span><a href="index.html"><span class="identifier">Interceptor</span></a></code>
+<p>Constructs an interceptor for a lambda. This compact syntax is most useful for inline
+interceptors.</p>
+<pre><code>val interceptor = Interceptor { chain: Interceptor.Chain -&gt;
+    chain.proceed(chain.request())
+}
+</code></pre>
 </BODY>
 </HTML>
