--- a/4.x/okhttp/okhttp/okhttp3/-media-type/index.html
+++ b/4.x/okhttp/okhttp/okhttp3/-media-type/index.html
@@ -78,20 +78,20 @@ Content-Type header.</p>
 <tbody>
 <tr>
 <td>
-<p><a href="get.html">get</a></p>
+<p><a href="to-media-type.html">toMediaType</a></p>
 </td>
 <td>
-<code><span class="keyword">fun </span><span class="identifier">get</span><span class="symbol">(</span><span class="identifier" id="okhttp3.MediaType.Companion$get(kotlin.String)/string">string</span><span class="symbol">:</span>&nbsp;<a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html"><span class="identifier">String</span></a><span class="symbol">)</span><span class="symbol">: </span><a href="./index.html"><span class="identifier">MediaType</span></a></code>
-<p>Returns a media type for <a href="get.html#okhttp3.MediaType.Companion$get(kotlin.String)/string">string</a>.</p>
+<code><span class="keyword">fun </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html"><span class="identifier">String</span></a><span class="symbol">.</span><span class="identifier">toMediaType</span><span class="symbol">(</span><span class="symbol">)</span><span class="symbol">: </span><a href="./index.html"><span class="identifier">MediaType</span></a></code>
+<p>Returns a media type for this string.</p>
 </td>
 </tr>
 <tr>
 <td>
-<p><a href="parse.html">parse</a></p>
+<p><a href="to-media-type-or-null.html">toMediaTypeOrNull</a></p>
 </td>
 <td>
-<code><span class="keyword">fun </span><span class="identifier">parse</span><span class="symbol">(</span><span class="identifier" id="okhttp3.MediaType.Companion$parse(kotlin.String)/string">string</span><span class="symbol">:</span>&nbsp;<a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html"><span class="identifier">String</span></a><span class="symbol">)</span><span class="symbol">: </span><a href="./index.html"><span class="identifier">MediaType</span></a><span class="symbol">?</span></code>
-<p>Returns a media type for <a href="parse.html#okhttp3.MediaType.Companion$parse(kotlin.String)/string">string</a>, or null if <a href="parse.html#okhttp3.MediaType.Companion$parse(kotlin.String)/string">string</a> is not a well-formed media type.</p>
+<code><span class="keyword">fun </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html"><span class="identifier">String</span></a><span class="symbol">.</span><span class="identifier">toMediaTypeOrNull</span><span class="symbol">(</span><span class="symbol">)</span><span class="symbol">: </span><a href="./index.html"><span class="identifier">MediaType</span></a><span class="symbol">?</span></code>
+<p>Returns a media type for this, or null if this is not a well-formed media type.</p>
 </td>
 </tr>
 </tbody>
