--- a/4.x/okhttp/okhttp/okhttp3/index.html
+++ b/4.x/okhttp/okhttp/okhttp3/index.html
@@ -76,7 +76,7 @@ represents a single request/response pair (stream), it cannot be executed twice.
 <p><a href="-certificate-pinner/index.html">CertificatePinner</a></p>
 </td>
 <td>
-<code><span class="keyword">data</span> <span class="keyword">class </span><span class="identifier">CertificatePinner</span></code>
+<code><span class="keyword">class </span><span class="identifier">CertificatePinner</span></code>
 <p>Constrains which certificates are trusted. Pinning certificates defends against attacks on
 certificate authorities. It also prevents connections through man-in-the-middle certificate
 authorities either known or unknown to the application's user.
@@ -141,7 +141,7 @@ connection.</p>
 <p><a href="-cookie/index.html">Cookie</a></p>
 </td>
 <td>
-<code><span class="keyword">data</span> <span class="keyword">class </span><span class="identifier">Cookie</span></code>
+<code><span class="keyword">class </span><span class="identifier">Cookie</span></code>
 <p>An <a href="http://tools.ietf.org/html/rfc6265">RFC 6265</a> Cookie.</p>
 </td>
 </tr>
@@ -324,7 +324,7 @@ imposes both obligations and limits on the client application.</p>
 <p><a href="-route/index.html">Route</a></p>
 </td>
 <td>
-<code><span class="keyword">data</span> <span class="keyword">class </span><span class="identifier">Route</span></code>
+<code><span class="keyword">class </span><span class="identifier">Route</span></code>
 <p>The concrete route used by a connection to reach an abstract origin server. When creating a
 connection the client has many options:</p>
 </td>
