--- a/4.x/mockwebserver/mockwebserver/okhttp3.mockwebserver/-mock-web-server/index.html
+++ b/4.x/mockwebserver/mockwebserver/okhttp3.mockwebserver/-mock-web-server/index.html
@@ -11,18 +11,6 @@
 <code><span class="keyword">class </span><span class="identifier">MockWebServer</span>&nbsp;<span class="symbol">:</span>&nbsp;<span class="identifier">ExternalResource</span><span class="symbol">, </span><a href="https://docs.oracle.com/javase/8/docs/api/java/io/Closeable.html"><span class="identifier">Closeable</span></a></code>
 <p>A scriptable web server. Callers supply canned responses and the server replays them upon request
 in sequence.</p>
-<h3>Types</h3>
-<table>
-<tbody>
-<tr>
-<td>
-<p><a href="-socket-handler/index.html">SocketHandler</a></p>
-</td>
-<td>
-<code><span class="keyword">inner</span> <span class="keyword">class </span><span class="identifier">SocketHandler</span></code></td>
-</tr>
-</tbody>
-</table>
 <h3>Constructors</h3>
 <table>
 <tbody>
@@ -43,12 +31,21 @@ in sequence.</p>
 <tbody>
 <tr>
 <td>
+<p><a href="body-limit.html">bodyLimit</a></p>
+</td>
+<td>
+<code><span class="keyword">var </span><span class="identifier">bodyLimit</span><span class="symbol">: </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-long/index.html"><span class="identifier">Long</span></a></code>
+<p>The number of bytes of the POST body to keep in memory to the given limit.</p>
+</td>
+</tr>
+<tr>
+<td>
 <p><a href="dispatcher.html">dispatcher</a></p>
 </td>
 <td>
 <code><span class="keyword">var </span><span class="identifier">dispatcher</span><span class="symbol">: </span><a href="../-dispatcher/index.html"><span class="identifier">Dispatcher</span></a></code>
-<p>Returns the dispatcher used to respond to HTTP requests.
-The default dispatcher is a <a href="../-queue-dispatcher/index.html">QueueDispatcher</a> but other dispatchers can be configured.</p>
+<p>The dispatcher used to respond to HTTP requests. The default dispatcher is a <a href="../-queue-dispatcher/index.html">QueueDispatcher</a>,
+which serves a fixed sequence of responses from a <a href="enqueue.html">queue</a>.</p>
 </td>
 </tr>
 <tr>
@@ -57,6 +54,51 @@ The default dispatcher is a <a href="../-queue-dispatcher/index.html">QueueDispa
 </td>
 <td>
 <code><span class="keyword">val </span><span class="identifier">hostName</span><span class="symbol">: </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html"><span class="identifier">String</span></a></code></td>
+</tr>
+<tr>
+<td>
+<p><a href="port.html">port</a></p>
+</td>
+<td>
+<code><span class="keyword">val </span><span class="identifier">port</span><span class="symbol">: </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-int/index.html"><span class="identifier">Int</span></a></code></td>
+</tr>
+<tr>
+<td>
+<p><a href="protocol-negotiation-enabled.html">protocolNegotiationEnabled</a></p>
+</td>
+<td>
+<code><span class="keyword">var </span><span class="identifier">protocolNegotiationEnabled</span><span class="symbol">: </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html"><span class="identifier">Boolean</span></a></code>
+<p>True if ALPN is used on incoming HTTPS connections to negotiate a protocol like HTTP/1.1 or
+HTTP/2. This is true by default; set to false to disable negotiation and restrict connections
+to HTTP/1.1.</p>
+</td>
+</tr>
+<tr>
+<td>
+<p><a href="protocols.html">protocols</a></p>
+</td>
+<td>
+<code><span class="keyword">var </span><span class="identifier">protocols</span><span class="symbol">: </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html"><span class="identifier">List</span></a><span class="symbol">&lt;</span><span class="identifier">Protocol</span><span class="symbol">&gt;</span></code>
+<p>The protocols supported by ALPN on incoming HTTPS connections in order of preference. The list
+must contain <a href="#">Protocol.HTTP_1_1</a>. It must not contain null.</p>
+</td>
+</tr>
+<tr>
+<td>
+<p><a href="request-count.html">requestCount</a></p>
+</td>
+<td>
+<code><span class="keyword">val </span><span class="identifier">requestCount</span><span class="symbol">: </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-int/index.html"><span class="identifier">Int</span></a></code>
+<p>The number of HTTP requests received thus far by this server. This may exceed the number of
+HTTP connections when connection reuse is in practice.</p>
+</td>
+</tr>
+<tr>
+<td>
+<p><a href="server-socket-factory.html">serverSocketFactory</a></p>
+</td>
+<td>
+<code><span class="keyword">var </span><span class="identifier">serverSocketFactory</span><span class="symbol">: </span><a href="https://docs.oracle.com/javase/8/docs/api/javax/net/ServerSocketFactory.html"><span class="identifier">ServerSocketFactory</span></a><span class="symbol">?</span></code></td>
 </tr>
 </tbody>
 </table>
@@ -97,23 +139,6 @@ so on.</p>
 </tr>
 <tr>
 <td>
-<p><a href="get-port.html">getPort</a></p>
-</td>
-<td>
-<code><span class="keyword">fun </span><span class="identifier">getPort</span><span class="symbol">(</span><span class="symbol">)</span><span class="symbol">: </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-int/index.html"><span class="identifier">Int</span></a></code></td>
-</tr>
-<tr>
-<td>
-<p><a href="get-request-count.html">getRequestCount</a></p>
-</td>
-<td>
-<code><span class="keyword">fun </span><span class="identifier">getRequestCount</span><span class="symbol">(</span><span class="symbol">)</span><span class="symbol">: </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-int/index.html"><span class="identifier">Int</span></a></code>
-<p>Returns the number of HTTP requests received thus far by this server. This may exceed the
-number of HTTP connections when connection reuse is in practice.</p>
-</td>
-</tr>
-<tr>
-<td>
 <p><a href="no-client-auth.html">noClientAuth</a></p>
 </td>
 <td>
@@ -122,13 +147,6 @@ number of HTTP connections when connection reuse is in practice.</p>
 authentication to another layer such as in an HTTP cookie or header. This is the default and
 most common configuration.</p>
 </td>
-</tr>
-<tr>
-<td>
-<p><a href="protocols.html">protocols</a></p>
-</td>
-<td>
-<code><span class="keyword">fun </span><span class="identifier">protocols</span><span class="symbol">(</span><span class="symbol">)</span><span class="symbol">: </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html"><span class="identifier">List</span></a><span class="symbol">&lt;</span><span class="identifier">Protocol</span><span class="symbol">&gt;</span></code></td>
 </tr>
 <tr>
 <td>
@@ -157,42 +175,6 @@ handshake will fail and no connection will be established.</p>
 </tr>
 <tr>
 <td>
-<p><a href="set-body-limit.html">setBodyLimit</a></p>
-</td>
-<td>
-<code><span class="keyword">fun </span><span class="identifier">setBodyLimit</span><span class="symbol">(</span><span class="identifier" id="okhttp3.mockwebserver.MockWebServer$setBodyLimit(kotlin.Long)/maxBodyLength">maxBodyLength</span><span class="symbol">:</span>&nbsp;<a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-long/index.html"><span class="identifier">Long</span></a><span class="symbol">)</span><span class="symbol">: </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html"><span class="identifier">Unit</span></a></code>
-<p>Sets the number of bytes of the POST body to keep in memory to the given limit.</p>
-</td>
-</tr>
-<tr>
-<td>
-<p><a href="set-protocol-negotiation-enabled.html">setProtocolNegotiationEnabled</a></p>
-</td>
-<td>
-<code><span class="keyword">fun </span><span class="identifier">setProtocolNegotiationEnabled</span><span class="symbol">(</span><span class="identifier" id="okhttp3.mockwebserver.MockWebServer$setProtocolNegotiationEnabled(kotlin.Boolean)/protocolNegotiationEnabled">protocolNegotiationEnabled</span><span class="symbol">:</span>&nbsp;<a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html"><span class="identifier">Boolean</span></a><span class="symbol">)</span><span class="symbol">: </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html"><span class="identifier">Unit</span></a></code>
-<p>Sets whether ALPN is used on incoming HTTPS connections to negotiate a protocol like HTTP/1.1
-or HTTP/2. Call this method to disable negotiation and restrict connections to HTTP/1.1.</p>
-</td>
-</tr>
-<tr>
-<td>
-<p><a href="set-protocols.html">setProtocols</a></p>
-</td>
-<td>
-<code><span class="keyword">fun </span><span class="identifier">setProtocols</span><span class="symbol">(</span><span class="identifier" id="okhttp3.mockwebserver.MockWebServer$setProtocols(kotlin.collections.List((okhttp3.Protocol)))/protocols">protocols</span><span class="symbol">:</span>&nbsp;<a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html"><span class="identifier">List</span></a><span class="symbol">&lt;</span><span class="identifier">Protocol</span><span class="symbol">&gt;</span><span class="symbol">)</span><span class="symbol">: </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html"><span class="identifier">Unit</span></a></code>
-<p>Indicates the protocols supported by ALPN on incoming HTTPS connections. This list is ignored
-when <a href="set-protocol-negotiation-enabled.html">negotiation is disabled</a>.</p>
-</td>
-</tr>
-<tr>
-<td>
-<p><a href="set-server-socket-factory.html">setServerSocketFactory</a></p>
-</td>
-<td>
-<code><span class="keyword">fun </span><span class="identifier">setServerSocketFactory</span><span class="symbol">(</span><span class="identifier" id="okhttp3.mockwebserver.MockWebServer$setServerSocketFactory(javax.net.ServerSocketFactory)/serverSocketFactory">serverSocketFactory</span><span class="symbol">:</span>&nbsp;<a href="https://docs.oracle.com/javase/8/docs/api/javax/net/ServerSocketFactory.html"><span class="identifier">ServerSocketFactory</span></a><span class="symbol">)</span><span class="symbol">: </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html"><span class="identifier">Unit</span></a></code></td>
-</tr>
-<tr>
-<td>
 <p><a href="shutdown.html">shutdown</a></p>
 </td>
 <td>
@@ -218,7 +200,7 @@ when <a href="set-protocol-negotiation-enabled.html">negotiation is disabled</a>
 <p>Awaits the next HTTP request, removes it, and returns it. Callers should use this to verify the
 request was sent as intended. This method will block until the request is available, possibly
 forever.</p>
-<code><span class="keyword">fun </span><span class="identifier">takeRequest</span><span class="symbol">(</span><span class="identifier" id="okhttp3.mockwebserver.MockWebServer$takeRequest(kotlin.Long, java.util.concurrent.TimeUnit)/timeout">timeout</span><span class="symbol">:</span>&nbsp;<a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-long/index.html"><span class="identifier">Long</span></a><span class="symbol">, </span><span class="identifier" id="okhttp3.mockwebserver.MockWebServer$takeRequest(kotlin.Long, java.util.concurrent.TimeUnit)/unit">unit</span><span class="symbol">:</span>&nbsp;<a href="https://docs.oracle.com/javase/8/docs/api/java/util/concurrent/TimeUnit.html"><span class="identifier">TimeUnit</span></a><span class="symbol">)</span><span class="symbol">: </span><a href="../-recorded-request/index.html"><span class="identifier">RecordedRequest</span></a><span class="symbol">?</span></code>
+<code><span class="keyword">fun </span><span class="identifier">takeRequest</span><span class="symbol">(</span><span class="identifier" id="okhttp3.mockwebserver.MockWebServer$takeRequest(kotlin.Long, java.util.concurrent.TimeUnit)/timeout">timeout</span><span class="symbol">:</span>&nbsp;<a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-long/index.html"><span class="identifier">Long</span></a><span class="symbol">, </span><span class="identifier" id="okhttp3.mockwebserver.MockWebServer$takeRequest(kotlin.Long, java.util.concurrent.TimeUnit)/unit">unit</span><span class="symbol">:</span>&nbsp;<a href="https://docs.oracle.com/javase/8/docs/api/java/util/concurrent/TimeUnit.html"><span class="identifier">TimeUnit</span></a><span class="symbol">)</span><span class="symbol">: </span><a href="../-recorded-request/index.html"><span class="identifier">RecordedRequest</span></a></code>
 <p>Awaits the next HTTP request (waiting up to the specified wait time if necessary), removes it,
 and returns it. Callers should use this to verify the request was sent as intended within the
 given time.</p>
