--- a/4.x/mockwebserver/mockwebserver/okhttp3.mockwebserver/-recorded-request/handshake.html
+++ b/4.x/mockwebserver/mockwebserver/okhttp3.mockwebserver/-recorded-request/handshake.html
@@ -10,7 +10,7 @@
 <h1>handshake</h1>
 <a name="okhttp3.mockwebserver.RecordedRequest$handshake"></a>
 <code><span class="keyword">val </span><span class="identifier">handshake</span><span class="symbol">: </span><span class="identifier">Handshake</span><span class="symbol">?</span></code>
-<p>The TLS handshake of the connection that carried this request, or null if the request
-was received without TLS.</p>
+<p>The TLS handshake of the connection that carried this request, or null if the request was
+received without TLS.</p>
 </BODY>
 </HTML>
