--- a/4.x/mockwebserver/mockwebserver/okhttp3.mockwebserver/-socket-policy/index.html
+++ b/4.x/mockwebserver/mockwebserver/okhttp3.mockwebserver/-socket-policy/index.html
@@ -139,7 +139,7 @@ header timeout issue.</p>
 <p><a href="-r-e-s-e-t_-s-t-r-e-a-m_-a-t_-s-t-a-r-t.html">RESET_STREAM_AT_START</a></p>
 </td>
 <td>
-<p>Fail HTTP/2 requests without processing them by sending an <a href="../-mock-response/get-http2-error-code.html">MockResponse.getHttp2ErrorCode</a>.</p>
+<p>Fail HTTP/2 requests without processing them by sending an <a href="#">MockResponse.getHttp2ErrorCode</a>.</p>
 </td>
 </tr>
 <tr>
