--- a/4.x/okhttp-dnsoverhttps/okhttp-dnsoverhttps/okhttp3.dnsoverhttps/-dns-over-https/client.html
+++ b/4.x/okhttp-dnsoverhttps/okhttp-dnsoverhttps/okhttp3.dnsoverhttps/-dns-over-https/client.html
@@ -8,7 +8,7 @@
 <a href="../../index.html">okhttp-dnsoverhttps</a>&nbsp;/&nbsp;<a href="../index.html">okhttp3.dnsoverhttps</a>&nbsp;/&nbsp;<a href="index.html">DnsOverHttps</a>&nbsp;/&nbsp;<a href="./client.html">client</a><br/>
 <br/>
 <h1>client</h1>
-<a name="okhttp3.dnsoverhttps.DnsOverHttps$client()"></a>
-<code><span class="keyword">fun </span><span class="identifier">client</span><span class="symbol">(</span><span class="symbol">)</span><span class="symbol">: </span><span class="identifier">OkHttpClient</span></code>
+<a name="okhttp3.dnsoverhttps.DnsOverHttps$client"></a>
+<code><span class="keyword">val </span><span class="identifier">client</span><span class="symbol">: </span><span class="identifier">OkHttpClient</span></code>
 </BODY>
 </HTML>
