--- a/4.x/okhttp-dnsoverhttps/okhttp-dnsoverhttps/okhttp3.dnsoverhttps/-dns-over-https/include-i-pv6.html
+++ b/4.x/okhttp-dnsoverhttps/okhttp-dnsoverhttps/okhttp3.dnsoverhttps/-dns-over-https/include-i-pv6.html
@@ -8,7 +8,7 @@
 <a href="../../index.html">okhttp-dnsoverhttps</a>&nbsp;/&nbsp;<a href="../index.html">okhttp3.dnsoverhttps</a>&nbsp;/&nbsp;<a href="index.html">DnsOverHttps</a>&nbsp;/&nbsp;<a href="./include-i-pv6.html">includeIPv6</a><br/>
 <br/>
 <h1>includeIPv6</h1>
-<a name="okhttp3.dnsoverhttps.DnsOverHttps$includeIPv6()"></a>
-<code><span class="keyword">fun </span><span class="identifier">includeIPv6</span><span class="symbol">(</span><span class="symbol">)</span><span class="symbol">: </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html"><span class="identifier">Boolean</span></a></code>
+<a name="okhttp3.dnsoverhttps.DnsOverHttps$includeIPv6"></a>
+<code><span class="keyword">val </span><span class="identifier">includeIPv6</span><span class="symbol">: </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html"><span class="identifier">Boolean</span></a></code>
 </BODY>
 </HTML>
