--- a/4.x/okhttp-dnsoverhttps/okhttp-dnsoverhttps/okhttp3.dnsoverhttps/-dns-over-https/index.html
+++ b/4.x/okhttp-dnsoverhttps/okhttp-dnsoverhttps/okhttp3.dnsoverhttps/-dns-over-https/index.html
@@ -9,11 +9,15 @@
 <br/>
 <h1>DnsOverHttps</h1>
 <code><span class="keyword">class </span><span class="identifier">DnsOverHttps</span>&nbsp;<span class="symbol">:</span>&nbsp;<span class="identifier">Dns</span></code>
-<p><a href="#">DNS over HTTPS implementation</a>[<a href="https://tools.ietf.org/html/draft-ietf-doh-dns-over-https-13">doh_spec</a>].</p>
-<p>Warning: This is a non-final API.</p>
-<p>As of OkHttp 3.14, this feature is an unstable preview: the API is subject to change,
-and the implementation is incomplete. We expect that OkHttp 4.0 or 4.1 will finalize this API.
-Until then, expect API and behavior changes when you update your OkHttp dependency.**</p>
+<p><a href="https://tools.ietf.org/html/draft-ietf-doh-dns-over-https-13">DNS over HTTPS implementation</a>.</p>
+<p>A DNS API client encodes a single DNS query into an HTTP request
+ using either the HTTP GET or POST method and the other requirements
+ of this section.  The DNS API server defines the URI used by the
+ request through the use of a URI Template.</p>
+<h3>Warning: This is a non-final API.</h3>
+<p>As of OkHttp 3.14, this feature is an unstable preview: the API is subject to change, and the
+implementation is incomplete. We expect that OkHttp 4.0 or 4.1 will finalize this API. Until
+then, expect API and behavior changes when you update your OkHttp dependency.**</p>
 <h3>Types</h3>
 <table>
 <tbody>
@@ -26,7 +30,7 @@ Until then, expect API and behavior changes when you update your OkHttp dependen
 </tr>
 </tbody>
 </table>
-<h3>Functions</h3>
+<h3>Properties</h3>
 <table>
 <tbody>
 <tr>
@@ -34,49 +38,54 @@ Until then, expect API and behavior changes when you update your OkHttp dependen
 <p><a href="client.html">client</a></p>
 </td>
 <td>
-<code><span class="keyword">fun </span><span class="identifier">client</span><span class="symbol">(</span><span class="symbol">)</span><span class="symbol">: </span><span class="identifier">OkHttpClient</span></code></td>
+<code><span class="keyword">val </span><span class="identifier">client</span><span class="symbol">: </span><span class="identifier">OkHttpClient</span></code></td>
 </tr>
 <tr>
 <td>
 <p><a href="include-i-pv6.html">includeIPv6</a></p>
 </td>
 <td>
-<code><span class="keyword">fun </span><span class="identifier">includeIPv6</span><span class="symbol">(</span><span class="symbol">)</span><span class="symbol">: </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html"><span class="identifier">Boolean</span></a></code></td>
-</tr>
-<tr>
-<td>
-<p><a href="lookup.html">lookup</a></p>
-</td>
-<td>
-<code><span class="keyword">fun </span><span class="identifier">lookup</span><span class="symbol">(</span><span class="identifier" id="okhttp3.dnsoverhttps.DnsOverHttps$lookup(kotlin.String)/hostname">hostname</span><span class="symbol">:</span>&nbsp;<a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html"><span class="identifier">String</span></a><span class="symbol">)</span><span class="symbol">: </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html"><span class="identifier">List</span></a><span class="symbol">&lt;</span><a href="https://docs.oracle.com/javase/8/docs/api/java/net/InetAddress.html"><span class="identifier">InetAddress</span></a><span class="symbol">&gt;</span></code></td>
+<code><span class="keyword">val </span><span class="identifier">includeIPv6</span><span class="symbol">: </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html"><span class="identifier">Boolean</span></a></code></td>
 </tr>
 <tr>
 <td>
 <p><a href="post.html">post</a></p>
 </td>
 <td>
-<code><span class="keyword">fun </span><span class="identifier">post</span><span class="symbol">(</span><span class="symbol">)</span><span class="symbol">: </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html"><span class="identifier">Boolean</span></a></code></td>
+<code><span class="keyword">val </span><span class="identifier">post</span><span class="symbol">: </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html"><span class="identifier">Boolean</span></a></code></td>
 </tr>
 <tr>
 <td>
 <p><a href="resolve-private-addresses.html">resolvePrivateAddresses</a></p>
 </td>
 <td>
-<code><span class="keyword">fun </span><span class="identifier">resolvePrivateAddresses</span><span class="symbol">(</span><span class="symbol">)</span><span class="symbol">: </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html"><span class="identifier">Boolean</span></a></code></td>
+<code><span class="keyword">val </span><span class="identifier">resolvePrivateAddresses</span><span class="symbol">: </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html"><span class="identifier">Boolean</span></a></code></td>
 </tr>
 <tr>
 <td>
 <p><a href="resolve-public-addresses.html">resolvePublicAddresses</a></p>
 </td>
 <td>
-<code><span class="keyword">fun </span><span class="identifier">resolvePublicAddresses</span><span class="symbol">(</span><span class="symbol">)</span><span class="symbol">: </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html"><span class="identifier">Boolean</span></a></code></td>
+<code><span class="keyword">val </span><span class="identifier">resolvePublicAddresses</span><span class="symbol">: </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html"><span class="identifier">Boolean</span></a></code></td>
 </tr>
 <tr>
 <td>
 <p><a href="url.html">url</a></p>
 </td>
 <td>
-<code><span class="keyword">fun </span><span class="identifier">url</span><span class="symbol">(</span><span class="symbol">)</span><span class="symbol">: </span><span class="identifier">HttpUrl</span></code></td>
+<code><span class="keyword">val </span><span class="identifier">url</span><span class="symbol">: </span><span class="identifier">HttpUrl</span></code></td>
+</tr>
+</tbody>
+</table>
+<h3>Functions</h3>
+<table>
+<tbody>
+<tr>
+<td>
+<p><a href="lookup.html">lookup</a></p>
+</td>
+<td>
+<code><span class="keyword">fun </span><span class="identifier">lookup</span><span class="symbol">(</span><span class="identifier" id="okhttp3.dnsoverhttps.DnsOverHttps$lookup(kotlin.String)/hostname">hostname</span><span class="symbol">:</span>&nbsp;<a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html"><span class="identifier">String</span></a><span class="symbol">)</span><span class="symbol">: </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html"><span class="identifier">List</span></a><span class="symbol">&lt;</span><a href="https://docs.oracle.com/javase/8/docs/api/java/net/InetAddress.html"><span class="identifier">InetAddress</span></a><span class="symbol">&gt;</span></code></td>
 </tr>
 </tbody>
 </table>
