--- a/4.x/okhttp-dnsoverhttps/okhttp-dnsoverhttps/okhttp3.dnsoverhttps/-dns-over-https/resolve-private-addresses.html
+++ b/4.x/okhttp-dnsoverhttps/okhttp-dnsoverhttps/okhttp3.dnsoverhttps/-dns-over-https/resolve-private-addresses.html
@@ -8,7 +8,7 @@
 <a href="../../index.html">okhttp-dnsoverhttps</a>&nbsp;/&nbsp;<a href="../index.html">okhttp3.dnsoverhttps</a>&nbsp;/&nbsp;<a href="index.html">DnsOverHttps</a>&nbsp;/&nbsp;<a href="./resolve-private-addresses.html">resolvePrivateAddresses</a><br/>
 <br/>
 <h1>resolvePrivateAddresses</h1>
-<a name="okhttp3.dnsoverhttps.DnsOverHttps$resolvePrivateAddresses()"></a>
-<code><span class="keyword">fun </span><span class="identifier">resolvePrivateAddresses</span><span class="symbol">(</span><span class="symbol">)</span><span class="symbol">: </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html"><span class="identifier">Boolean</span></a></code>
+<a name="okhttp3.dnsoverhttps.DnsOverHttps$resolvePrivateAddresses"></a>
+<code><span class="keyword">val </span><span class="identifier">resolvePrivateAddresses</span><span class="symbol">: </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html"><span class="identifier">Boolean</span></a></code>
 </BODY>
 </HTML>
