--- a/4.x/okhttp-dnsoverhttps/okhttp-dnsoverhttps/okhttp3.dnsoverhttps/-dns-over-https/resolve-public-addresses.html
+++ b/4.x/okhttp-dnsoverhttps/okhttp-dnsoverhttps/okhttp3.dnsoverhttps/-dns-over-https/resolve-public-addresses.html
@@ -8,7 +8,7 @@
 <a href="../../index.html">okhttp-dnsoverhttps</a>&nbsp;/&nbsp;<a href="../index.html">okhttp3.dnsoverhttps</a>&nbsp;/&nbsp;<a href="index.html">DnsOverHttps</a>&nbsp;/&nbsp;<a href="./resolve-public-addresses.html">resolvePublicAddresses</a><br/>
 <br/>
 <h1>resolvePublicAddresses</h1>
-<a name="okhttp3.dnsoverhttps.DnsOverHttps$resolvePublicAddresses()"></a>
-<code><span class="keyword">fun </span><span class="identifier">resolvePublicAddresses</span><span class="symbol">(</span><span class="symbol">)</span><span class="symbol">: </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html"><span class="identifier">Boolean</span></a></code>
+<a name="okhttp3.dnsoverhttps.DnsOverHttps$resolvePublicAddresses"></a>
+<code><span class="keyword">val </span><span class="identifier">resolvePublicAddresses</span><span class="symbol">: </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html"><span class="identifier">Boolean</span></a></code>
 </BODY>
 </HTML>
