--- a/4.x/okhttp-dnsoverhttps/okhttp-dnsoverhttps/okhttp3.dnsoverhttps/-dns-over-https/url.html
+++ b/4.x/okhttp-dnsoverhttps/okhttp-dnsoverhttps/okhttp3.dnsoverhttps/-dns-over-https/url.html
@@ -8,7 +8,7 @@
 <a href="../../index.html">okhttp-dnsoverhttps</a>&nbsp;/&nbsp;<a href="../index.html">okhttp3.dnsoverhttps</a>&nbsp;/&nbsp;<a href="index.html">DnsOverHttps</a>&nbsp;/&nbsp;<a href="./url.html">url</a><br/>
 <br/>
 <h1>url</h1>
-<a name="okhttp3.dnsoverhttps.DnsOverHttps$url()"></a>
-<code><span class="keyword">fun </span><span class="identifier">url</span><span class="symbol">(</span><span class="symbol">)</span><span class="symbol">: </span><span class="identifier">HttpUrl</span></code>
+<a name="okhttp3.dnsoverhttps.DnsOverHttps$url"></a>
+<code><span class="keyword">val </span><span class="identifier">url</span><span class="symbol">: </span><span class="identifier">HttpUrl</span></code>
 </BODY>
 </HTML>
