--- a/4.x/okhttp-tls/okhttp-tls/okhttp3.tls/-handshake-certificates/index.html
+++ b/4.x/okhttp-tls/okhttp-tls/okhttp3.tls/-handshake-certificates/index.html
@@ -50,7 +50,7 @@ authentication is optional.</p>
 </tr>
 </tbody>
 </table>
-<h3>Functions</h3>
+<h3>Properties</h3>
 <table>
 <tbody>
 <tr>
@@ -58,8 +58,20 @@ authentication is optional.</p>
 <p><a href="key-manager.html">keyManager</a></p>
 </td>
 <td>
-<code><span class="keyword">fun </span><span class="identifier">keyManager</span><span class="symbol">(</span><span class="symbol">)</span><span class="symbol">: </span><a href="https://docs.oracle.com/javase/8/docs/api/javax/net/ssl/X509KeyManager.html"><span class="identifier">X509KeyManager</span></a></code></td>
+<code><span class="keyword">val </span><span class="identifier">keyManager</span><span class="symbol">: </span><a href="https://docs.oracle.com/javase/8/docs/api/javax/net/ssl/X509KeyManager.html"><span class="identifier">X509KeyManager</span></a></code></td>
 </tr>
+<tr>
+<td>
+<p><a href="trust-manager.html">trustManager</a></p>
+</td>
+<td>
+<code><span class="keyword">val </span><span class="identifier">trustManager</span><span class="symbol">: </span><a href="https://docs.oracle.com/javase/8/docs/api/javax/net/ssl/X509TrustManager.html"><span class="identifier">X509TrustManager</span></a></code></td>
+</tr>
+</tbody>
+</table>
+<h3>Functions</h3>
+<table>
+<tbody>
 <tr>
 <td>
 <p><a href="ssl-context.html">sslContext</a></p>
@@ -73,13 +85,6 @@ authentication is optional.</p>
 </td>
 <td>
 <code><span class="keyword">fun </span><span class="identifier">sslSocketFactory</span><span class="symbol">(</span><span class="symbol">)</span><span class="symbol">: </span><a href="https://docs.oracle.com/javase/8/docs/api/javax/net/ssl/SSLSocketFactory.html"><span class="identifier">SSLSocketFactory</span></a></code></td>
-</tr>
-<tr>
-<td>
-<p><a href="trust-manager.html">trustManager</a></p>
-</td>
-<td>
-<code><span class="keyword">fun </span><span class="identifier">trustManager</span><span class="symbol">(</span><span class="symbol">)</span><span class="symbol">: </span><a href="https://docs.oracle.com/javase/8/docs/api/javax/net/ssl/X509TrustManager.html"><span class="identifier">X509TrustManager</span></a></code></td>
 </tr>
 </tbody>
 </table>
