--- a/4.x/okhttp-tls/okhttp-tls/okhttp3.tls/-held-certificate/certificate.html
+++ b/4.x/okhttp-tls/okhttp-tls/okhttp3.tls/-held-certificate/certificate.html
@@ -8,7 +8,7 @@
 <a href="../../index.html">okhttp-tls</a>&nbsp;/&nbsp;<a href="../index.html">okhttp3.tls</a>&nbsp;/&nbsp;<a href="index.html">HeldCertificate</a>&nbsp;/&nbsp;<a href="./certificate.html">certificate</a><br/>
 <br/>
 <h1>certificate</h1>
-<a name="okhttp3.tls.HeldCertificate$certificate()"></a>
-<code><span class="keyword">fun </span><span class="identifier">certificate</span><span class="symbol">(</span><span class="symbol">)</span><span class="symbol">: </span><a href="https://docs.oracle.com/javase/8/docs/api/java/security/cert/X509Certificate.html"><span class="identifier">X509Certificate</span></a></code>
+<a name="okhttp3.tls.HeldCertificate$certificate"></a>
+<code><span class="keyword">val </span><span class="identifier">certificate</span><span class="symbol">: </span><a href="https://docs.oracle.com/javase/8/docs/api/java/security/cert/X509Certificate.html"><span class="identifier">X509Certificate</span></a></code>
 </BODY>
 </HTML>
