--- a/4.x/okhttp-tls/okhttp-tls/okhttp3.tls/-held-certificate/index.html
+++ b/4.x/okhttp-tls/okhttp-tls/okhttp3.tls/-held-certificate/index.html
@@ -100,7 +100,7 @@ TLS:</p>
 </tr>
 </tbody>
 </table>
-<h3>Functions</h3>
+<h3>Properties</h3>
 <table>
 <tbody>
 <tr>
@@ -108,8 +108,20 @@ TLS:</p>
 <p><a href="certificate.html">certificate</a></p>
 </td>
 <td>
-<code><span class="keyword">fun </span><span class="identifier">certificate</span><span class="symbol">(</span><span class="symbol">)</span><span class="symbol">: </span><a href="https://docs.oracle.com/javase/8/docs/api/java/security/cert/X509Certificate.html"><span class="identifier">X509Certificate</span></a></code></td>
+<code><span class="keyword">val </span><span class="identifier">certificate</span><span class="symbol">: </span><a href="https://docs.oracle.com/javase/8/docs/api/java/security/cert/X509Certificate.html"><span class="identifier">X509Certificate</span></a></code></td>
 </tr>
+<tr>
+<td>
+<p><a href="key-pair.html">keyPair</a></p>
+</td>
+<td>
+<code><span class="keyword">val </span><span class="identifier">keyPair</span><span class="symbol">: </span><a href="https://docs.oracle.com/javase/8/docs/api/java/security/KeyPair.html"><span class="identifier">KeyPair</span></a></code></td>
+</tr>
+</tbody>
+</table>
+<h3>Functions</h3>
+<table>
+<tbody>
 <tr>
 <td>
 <p><a href="certificate-pem.html">certificatePem</a></p>
@@ -118,13 +130,6 @@ TLS:</p>
 <code><span class="keyword">fun </span><span class="identifier">certificatePem</span><span class="symbol">(</span><span class="symbol">)</span><span class="symbol">: </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html"><span class="identifier">String</span></a></code>
 <p>Returns the certificate encoded in <a href="https://tools.ietf.org/html/rfc7468">PEM format</a>.</p>
 </td>
-</tr>
-<tr>
-<td>
-<p><a href="key-pair.html">keyPair</a></p>
-</td>
-<td>
-<code><span class="keyword">fun </span><span class="identifier">keyPair</span><span class="symbol">(</span><span class="symbol">)</span><span class="symbol">: </span><a href="https://docs.oracle.com/javase/8/docs/api/java/security/KeyPair.html"><span class="identifier">KeyPair</span></a></code></td>
 </tr>
 <tr>
 <td>
