--- a/4.x/okhttp-tls/okhttp-tls/okhttp3.tls/-held-certificate/key-pair.html
+++ b/4.x/okhttp-tls/okhttp-tls/okhttp3.tls/-held-certificate/key-pair.html
@@ -8,7 +8,7 @@
 <a href="../../index.html">okhttp-tls</a>&nbsp;/&nbsp;<a href="../index.html">okhttp3.tls</a>&nbsp;/&nbsp;<a href="index.html">HeldCertificate</a>&nbsp;/&nbsp;<a href="./key-pair.html">keyPair</a><br/>
 <br/>
 <h1>keyPair</h1>
-<a name="okhttp3.tls.HeldCertificate$keyPair()"></a>
-<code><span class="keyword">fun </span><span class="identifier">keyPair</span><span class="symbol">(</span><span class="symbol">)</span><span class="symbol">: </span><a href="https://docs.oracle.com/javase/8/docs/api/java/security/KeyPair.html"><span class="identifier">KeyPair</span></a></code>
+<a name="okhttp3.tls.HeldCertificate$keyPair"></a>
+<code><span class="keyword">val </span><span class="identifier">keyPair</span><span class="symbol">: </span><a href="https://docs.oracle.com/javase/8/docs/api/java/security/KeyPair.html"><span class="identifier">KeyPair</span></a></code>
 </BODY>
 </HTML>
