--- a/4.x/okhttp/okhttp/okhttp3/-certificate-pinner/index.html
+++ b/4.x/okhttp/okhttp/okhttp3/-certificate-pinner/index.html
@@ -8,7 +8,7 @@
 <a href="../../index.html">okhttp</a>&nbsp;/&nbsp;<a href="../index.html">okhttp3</a>&nbsp;/&nbsp;<a href="./index.html">CertificatePinner</a><br/>
 <br/>
 <h1>CertificatePinner</h1>
-<code><span class="keyword">data</span> <span class="keyword">class </span><span class="identifier">CertificatePinner</span></code>
+<code><span class="keyword">class </span><span class="identifier">CertificatePinner</span></code>
 <p>Constrains which certificates are trusted. Pinning certificates defends against attacks on
 certificate authorities. It also prevents connections through man-in-the-middle certificate
 authorities either known or unknown to the application's user.
@@ -107,6 +107,20 @@ accepted by <a href="https://docs.oracle.com/javase/8/docs/api/javax/net/ssl/Tru
 Does nothing if there are no certificates pinned for <code>hostname</code>. OkHttp calls this after a
 successful TLS handshake, but before the connection is used.</p>
 </td>
+</tr>
+<tr>
+<td>
+<p><a href="equals.html">equals</a></p>
+</td>
+<td>
+<code><span class="keyword">fun </span><span class="identifier">equals</span><span class="symbol">(</span><span class="identifier" id="okhttp3.CertificatePinner$equals(kotlin.Any)/other">other</span><span class="symbol">:</span>&nbsp;<a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-any/index.html"><span class="identifier">Any</span></a><span class="symbol">?</span><span class="symbol">)</span><span class="symbol">: </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html"><span class="identifier">Boolean</span></a></code></td>
+</tr>
+<tr>
+<td>
+<p><a href="hash-code.html">hashCode</a></p>
+</td>
+<td>
+<code><span class="keyword">fun </span><span class="identifier">hashCode</span><span class="symbol">(</span><span class="symbol">)</span><span class="symbol">: </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-int/index.html"><span class="identifier">Int</span></a></code></td>
 </tr>
 </tbody>
 </table>
