--- a/4.x/okhttp/okhttp/okhttp3/-route/index.html
+++ b/4.x/okhttp/okhttp/okhttp3/-route/index.html
@@ -8,7 +8,7 @@
 <a href="../../index.html">okhttp</a>&nbsp;/&nbsp;<a href="../index.html">okhttp3</a>&nbsp;/&nbsp;<a href="./index.html">Route</a><br/>
 <br/>
 <h1>Route</h1>
-<code><span class="keyword">data</span> <span class="keyword">class </span><span class="identifier">Route</span></code>
+<code><span class="keyword">class </span><span class="identifier">Route</span></code>
 <p>The concrete route used by a connection to reach an abstract origin server. When creating a
 connection the client has many options:</p>
 <ul><li><strong>HTTP proxy:</strong> a proxy server may be explicitly configured for the client.
@@ -65,6 +65,20 @@ connection the client has many options:</p>
 <h3>Functions</h3>
 <table>
 <tbody>
+<tr>
+<td>
+<p><a href="equals.html">equals</a></p>
+</td>
+<td>
+<code><span class="keyword">fun </span><span class="identifier">equals</span><span class="symbol">(</span><span class="identifier" id="okhttp3.Route$equals(kotlin.Any)/other">other</span><span class="symbol">:</span>&nbsp;<a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-any/index.html"><span class="identifier">Any</span></a><span class="symbol">?</span><span class="symbol">)</span><span class="symbol">: </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html"><span class="identifier">Boolean</span></a></code></td>
+</tr>
+<tr>
+<td>
+<p><a href="hash-code.html">hashCode</a></p>
+</td>
+<td>
+<code><span class="keyword">fun </span><span class="identifier">hashCode</span><span class="symbol">(</span><span class="symbol">)</span><span class="symbol">: </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-int/index.html"><span class="identifier">Int</span></a></code></td>
+</tr>
 <tr>
 <td>
 <p><a href="requires-tunnel.html">requiresTunnel</a></p>
