Point at the canonical documentation
https://publicobject.com/2017/02/14/canonical-urls-for-javadocs/

--- a/3.x/okhttp/okhttp3/CipherSuite.html
+++ b/3.x/okhttp/okhttp3/CipherSuite.html
@@ -8,6 +8,7 @@
 <meta name="date" content="2019-03-13">
 <link rel="stylesheet" type="text/css" href="../stylesheet.css" title="Style">
 <script type="text/javascript" src="../script.js"></script>
+<link rel="canonical" href="http://square.github.io/okhttp/4.x/okhttp/okhttp3/-cipher-suite/"/>
 </head>
 <body>
 <script type="text/javascript"><!--
