--- a/3.x/mockwebserver/okhttp3/mockwebserver/QueueDispatcher.html
+++ b/3.x/mockwebserver/okhttp3/mockwebserver/QueueDispatcher.html
@@ -8,6 +8,7 @@
 <meta name="date" content="2019-03-14">
 <link rel="stylesheet" type="text/css" href="../../stylesheet.css" title="Style">
 <script type="text/javascript" src="../../script.js"></script>
+<link rel="canonical" href="http://square.github.io/okhttp/4.x/mockwebserver/okhttp3.mockwebserver/-queue-dispatcher/"/>
 </head>
 <body>
 <script type="text/javascript"><!--
