--- a/3.x/okhttp-sse/okhttp3/sse/EventSourceListener.html
+++ b/3.x/okhttp-sse/okhttp3/sse/EventSourceListener.html
@@ -8,6 +8,7 @@
 <meta name="date" content="2019-03-14">
 <link rel="stylesheet" type="text/css" href="../../stylesheet.css" title="Style">
 <script type="text/javascript" src="../../script.js"></script>
+<link rel="canonical" href="http://square.github.io/okhttp/4.x/okhttp-sse/okhttp3.sse/-event-source-listener/"/>
 </head>
 <body>
 <script type="text/javascript"><!--
